Fix doc generation and add documentation link in README

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ pages:
   - doxygen Doxyfile
   - cd ..
   - mkdir public
-  - mv doc/html/ public/
+  - mv doc/html/* public/
   artifacts:
     paths:
     - public
