--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pages:
   - cd ..
   - mkdir public
   - mv doc/html/* public/
-  - cp doc/badges public/
+  - cp -r doc/badges public/
   artifacts:
     paths:
     - public
