Add GitHub mirroring

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,3 +23,10 @@ pages:
     - public
   only:
   - master
+
+mirror:
+  image: registry.gitlab.com/antoniocoratelli/docker-builder-as-a-service/ci-mirror
+  stage: deploy
+  script: ci-mirror git@github.com:antoniocoratelli/state-machine.git
+  only:
+  - master
